Fix editor layout shift (#3137)
* Refactor imports

* Align editor loc numbers to the right

* Update hook dependencies, be exhaustive where possible

--- a/app/css/pages/editor.css
+++ b/app/css/pages/editor.css
@@ -487,8 +487,9 @@
             @apply border-borderColor7;
 
             & .cm-lineNumbers .cm-gutterElement {
-                @apply text-center text-textColor7;
-                @apply px-16;
+                @apply text-right text-textColor7;
+                width: 3rem;
+                padding: 0;
             }
             & .cm-foldGutter .cm-gutterElement {
                 @apply pr-4;
